--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                     <div class="col-xl-4 col-lg-5">
                         <div class="featured-text text-center text-lg-left">
                             <h4>The 15</h4>
-                            <p class="text-black-50 mb-0">The 15 is an NFT collection inspired by the visual text genre for the performing arts. It features 100 visual text NFTs randomly selected from the VTGFTPA database.  At current the database houses of 100,000 visual text pieces submitted by users around the world.  We have officially partnered with the VTGFTPA and all artists may be remunerated.</p>
+                            <p class="text-black-50 mb-0">The 15 is an NFT collection inspired by the visual text genre for the performing arts. It features 100 visual text NFTs randomly selected from the VTGFTPA database.  Currently the database is home to 100,000 user submitted visual text arts submitted.  We have officially partnered with the VTGFTPA to provide these arts royalty free to the end user.  All artists will be whitelisted and may be remunerated.</p>
                         </div>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                                    <h4 class="text-white">Submission by user @ARTGurl96</h4>
+                                    <h4 class="text-white">Submission by user @ArtNSoul</h4>
                                     <p class="mb-0 text-white-50"> The text in this one really hits home.  Both visually and textually, which is why this is one of our more rare pieces.</p>
                                     <hr class="d-none d-lg-block mb-0 ms-0" />
                                 </div>
@@ -96,8 +96,8 @@
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
                                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                                    <h4 class="text-white">Sometimes all you need is a good laugh</h4>
-                                    <p class="mb-0 text-white-50">Yet another possibility in the collection.  This one by user @CmyTxt.  </p>
+                                    <h4 class="text-white">A very fitting submission by @ArtistAbode.</h4>
+                                    <p class="mb-0 text-white-50">Sometimes we need our text visually to truly feel the moment. If you have any questions or concerns, just google whatever you are looking for.  There are a few different ways to do it but if you need help just shoot me an email or whatever</p>
                                     <hr class="d-none d-lg-block mb-0 me-0" />
 
                                     <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/238480610&color=%23ff5500&auto_play=true&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/pedro-soria-8" title="Pedro Soria" target="_blank" style="color: #cccccc; text-decoration: none;">Pedro Soria</a> · <a href="https://soundcloud.com/pedro-soria-8/luniz-i-got-5-on-it-instrumental" title="Luniz - I Got 5 On It Instrumental" target="_blank" style="color: #cccccc; text-decoration: none;">Luniz - I Got 5 On It Instrumental</a></div>                                </div>
